moved nav container inside header, see if it fixes the overflow deal on mobile

--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@
 
  .header {
    background-color: #000;
-   padding: 5px 50px;
+   padding: 5px 0;
    position: relative;
    z-index: 4;
    width: 100%;
@@ -186,6 +186,7 @@
    color: #fff;
    font-size: 35px;
    margin-bottom: 5px;
+   padding-left: 50px;
    position: relative;
  }
 
@@ -200,6 +201,7 @@
  .header span {
    color: #FF00BF;
    font-size: 22px;
+   padding-left: 50px;
  }
 
  html {
@@ -279,6 +281,7 @@
    position: relative;
    width: 100%;
    z-index: 2;
+   /* border: solid 1px blue; */
  }
 
  .nav-links-container {
@@ -543,13 +546,10 @@
      width: 65px;
    }
 
-   .header {
-     padding: 5px 30px;
-   }
-
    .header h1 {
      font-size: 30px;
      margin-bottom: 5px;
+     padding-left: 30px;
    }
 
    .header h1::after {
@@ -558,6 +558,7 @@
 
    .header span {
      font-size: 20px;
+     padding-left: 30px;
    }
 
    .nav-button {
@@ -759,15 +760,11 @@
      width: 50px;
    }
 
-   .header {
-     background: rgba(0, 0, 0, 1);
-     padding: 5px 20px;
-   }
-
    .header h1 {
      font-size: 28px;
      margin-bottom: 5px;
      margin-top: 5px;
+     padding-left: 20px;
    }
 
    .header h1::after {
@@ -776,6 +773,7 @@
 
    .header span {
      font-size: 18px;
+     padding-left: 20px;
    }
 
    .header-logo {
@@ -793,7 +791,7 @@
 
    .nav-container {
      background-color: transparent;
-     height: 25px;
+     height: 0;
      z-index: 3;
      /* border: solid 1px blue; */
    }
@@ -807,17 +805,17 @@
      border-bottom-left-radius: 5px;
      flex-direction: column;
      height: auto;
-     padding: 50px 10px 0 10px;
+     padding: 60px 10px 0 10px;
      position: absolute;
-     right: 0;
-     top: -320px;
+     right: -175px;
+     top: 0;
      transition: all 250ms ease-out;
      width: 175px;
      /* border: solid 1px blue; */
    }
 
    .move-nav-links-on {
-     top: 0;
+     right: 0;
    }
 
    .profile-photo {
@@ -883,13 +881,14 @@
    }
 
    .header {
-     padding: 2px 10px;
+     padding: 2px 0;
    }
 
    .header h1 {
      font-size: 22px;
      margin-bottom: 0;
      margin-top: 5px;
+     padding-left: 10px;
    }
 
    .header h1::after {
@@ -899,6 +898,7 @@
 
    .header span {
      font-size: 14px;
+     padding-left: 10px;
    }
 
    .nav-button {
